added a ref to homepage.php in the header, added a little style for the logo in css

--- a/saiddit/static/css/style.css
+++ b/saiddit/static/css/style.css
@@ -94,6 +94,15 @@ i {
     border:2px solid #5087B6;  
 }
 
+#logo{
+    position:absolute;
+    font-family:'Raleway',sans-serif;
+    color:black;
+    top:-15px;
+    left:5px;
+    border:1px solid black;
+}
+
 #login_button {
     position:absolute;
     right:0px;
