--- a/saiddit/static/css/style.css
+++ b/saiddit/static/css/style.css
@@ -89,9 +89,9 @@ i {
 #nav_bar {
     position:relative;
     width:100%;
-    height:50px;
+    /*height:50px;*/
     background-color:#CBE4FA;
-    border:2px solid #5087B6;  
+    border:2px solid #5087B6;
 }
 
 #login_button {
@@ -102,17 +102,17 @@ i {
 
 #popup_main {
     z-index:99;
-    
+
     width:100%;
     height:100%;
 
-    
+
     top:0;
     left:0;
-    
+
     display:none;
     position:fixed;
-    
+
     background-color:rgba(0,0,0,0.6);
     overflow:auto;
 }
@@ -127,7 +127,7 @@ i {
 
     border:2px solid gray;
     border-radius:10px;
-    
+
     font-family:'Raleway',sans-serif;
     background-color:#fff;
     overflow:hidden;
@@ -175,7 +175,7 @@ i {
 #disclaimer {
     position:absolute;
     z-index:99;
-    
+
     bottom:40px;
     left:35px;
 
@@ -229,19 +229,19 @@ i {
 
 .valid {
     position:absolute;
-    
+
     text-align:center;
     font-size:28px;
-    
+
     width:20px;
     height:20px;
 }
 
 .error {
     position:absolute;
-    
+
     color: red;
-    
+
     width:380px;
     height:30px;
 
@@ -251,22 +251,22 @@ i {
 #foot {
     position:relative;
     bottom:0px;
-    
+
     width:625px;
     height:225px;
-    
+
     margin-left:auto;
     margin-right:auto;
-    
+
     border:1px solid #ccc;
     border-radius:10px;
 }
 
 .extras {
     position:absolute;
-    
+
     text-align: center;
-    
+
     width:150px;
     height:230px;
 
@@ -275,13 +275,13 @@ i {
 #trademark {
     position:relative;
     bottom:0px;
-    
+
     text-align: center;
     font-size:13px;
     color:grey;
     width:700px;
     height:30px;
-    
+
     margin-left:auto;
     margin-right:auto;
 }
