--- a/saiddit/static/css/style.css
+++ b/saiddit/static/css/style.css
@@ -211,9 +211,11 @@ i {
 #content {
     position:relative;
     display:inline-block;
-    width:65%;
+    width:70%;
     left:0px;
     height:100%;
+    padding-left: 20px;
+
     /*border:2px solid gray;
     border-radius:10px;*/
 }
@@ -284,4 +286,15 @@ i {
 
     margin-left:auto;
     margin-right:auto;
+}
+
+/* ------------ Posts ----*/
+.post-votes-wrapper {
+    padding-left: 10px;
+    padding-top: 3px;
+    text-align: center;
+}
+
+.vote-glyph {
+    padding-left: 2px;
 }
