added new_post.php to interface

--- a/saiddit/static/css/style.css
+++ b/saiddit/static/css/style.css
@@ -214,12 +214,9 @@ i {
     width:70%;
     left:0px;
     height:100%;
-<<<<<<< HEAD
     padding:10px;
-=======
     padding-left: 20px;
 
->>>>>>> 6b5ad91e6f950fca416f540f8e587a525712d1e8
     /*border:2px solid gray;
     border-radius:10px;*/
 }
@@ -232,7 +229,8 @@ i {
     height:100%;
     padding:10px;
     /*border:2px solid gray;
-    border-radius:10px;*/}
+    border-radius:10px;*/
+}
 
 .valid {
     position:absolute;
@@ -318,4 +316,38 @@ i {
 .vote-glyph {
     padding-left: 2px;
 
+}
+
+/* ------------------------------------------------------ NEW_POST ------------------------------------------------------ */
+
+#content_submit {
+    position:relative;
+    display:inline-block;
+    width:70%;
+    left:0px;
+    height:100%;
+    padding:10px;
+    padding-left: 20px;
+
+    border:2px solid gray;
+    border-radius:10px;
+}
+
+#ads_submit {
+    position:absolute;
+    display:inline-block;
+    width:25%;
+    right:0px;
+    height:100%;
+    padding:10px;
+    border:2px solid gray;
+    border-radius:10px;
+}
+
+.div_new_post {
+    background-color:#CBE4FA;
+    border:2px #CBE4FA;
+    border-radius:10px;
+    padding:5px;
+    min-height:50px;
 }
