--- a/saiddit/static/css/style.css
+++ b/saiddit/static/css/style.css
@@ -89,9 +89,10 @@ i {
 #nav_bar {
     position:relative;
     width:100%;
-    /*height:50px;*/
+    height:55px;
     background-color:#CBE4FA;
     border:2px solid #5087B6;
+    padding: 4px;
 }
 
 #login_button {
@@ -305,6 +306,16 @@ i {
     border:1px solid #5087B6;
     border-radius:10px;
 }
+
+.nav-title {
+    display: inline;
+    padding: 10px;
+}
+
+#page-title {
+    font-size: large;
+}
+
 /* ------------ Posts ----*/
 .post-votes-wrapper {
     padding-left: 10px;
