--- a/saiddit/static/css/style.css
+++ b/saiddit/static/css/style.css
@@ -344,9 +344,25 @@ i {
 }
 
 .div_new_post {
+
     background-color:#CBE4FA;
+    font-size:15px;
     border:2px #CBE4FA;
     border-radius:10px;
     padding:5px;
     min-height:50px;
+}
+
+:required {
+    border-width:4px;
+    border-color:#FF0000;
+}
+
+#warning_new_post {
+    height:100px;
+    width:100%;
+    font-size:20px;
+    background-color:#FFDDA2;
+    border:2px #FF0000;
+    padding:5px;
 }
