Changed the password salting

--- a/saiddit/static/css/style.css
+++ b/saiddit/static/css/style.css
@@ -327,6 +327,10 @@ i {
 
 }
 
+#navbar-saiddit {
+    margin-bottom: 0px;
+}
+
 /* ------------------------------------------------------ NEW_POST ------------------------------------------------------ */
 
 #content_submit {
