--- a/saiddit/static/css/style.css
+++ b/saiddit/static/css/style.css
@@ -91,7 +91,7 @@ i {
     width:100%;
     height:55px;
     background-color:#CBE4FA;
-    border:2px solid #5087B6;
+    border:0.1em solid #000;
     padding: 4px;
 }
 
@@ -99,6 +99,9 @@ i {
     position:absolute;
     right:0px;
     bottom:0px;
+    width:200px;
+    text-align:center;
+    background-color:#E3EDFA;
 }
 
 #popup_main {
@@ -364,10 +367,7 @@ i {
     min-height:50px;
 }
 
-:required {
-    border-width:4px;
-    border-color:#FF0000;
-}
+
 
 #warning_new_post {
     height:100px;
@@ -379,5 +379,6 @@ i {
 }
 
 .textarea_form{
-	width:100%;
+	width:95%;
+    resize: none;
 }
