--- a/saiddit/static/css/style.css
+++ b/saiddit/static/css/style.css
@@ -295,7 +295,7 @@ i {
 
 .new {
     width: 100%;
-    height: 50px;
+    height: 55px;
 
     text-align:center;
     color:#5087B6;
@@ -306,6 +306,38 @@ i {
     margin-right:auto;
 
     border:1px solid #5087B6;
+    border-radius:10px;
+}
+
+.subscribe { /* if not subscribed, show green  */
+    width: 50%;
+    height: 30px;
+
+    text-align:center;
+    color:#ffffff;
+    font-size:20px;
+    background-color:#70db70;
+
+    margin-left:auto;
+    margin-right:auto;
+
+    border:1px solid #33cc33;
+    border-radius:10px;
+}
+
+.unsubscribe { /* if subscribed, show red.*/
+    width: 50%;
+    height: 30px;
+
+    text-align:center;
+    color:#ffffff;
+    font-size:20px;
+    background-color:#ff4d4d;
+
+    margin-left:auto;
+    margin-right:auto;
+
+    border:1px solid #ff0000;
     border-radius:10px;
 }
 
